--- a/src/components/Header/slide.css
+++ b/src/components/Header/slide.css
@@ -10,12 +10,12 @@
 }
 
 .carousel .control-dots{
+    /* background-color: red; */
     position: absolute;
-    bottom: 10px;
-    margin: 10px 0;
-    padding: 0;
-    text-align: center;
-    width: 100%;
+    padding: 0px;
+    bottom: 139px;
+    left: 101px;
+    width: 10%;
     z-index: 1;
 }
 
