--- a/src/components/Header/slide.css
+++ b/src/components/Header/slide.css
@@ -10,7 +10,6 @@
 }
 
 .carousel .control-dots{
-    /* background-color: red; */
     position: absolute;
     padding: 0px;
     bottom: 139px;
@@ -18,6 +17,15 @@
     width: 10%;
     z-index: 1;
 }
+.carousel .control-dots .dot{
+    background: var(--unnamed-color-dce1da);
+}
+.carousel .control-dots .selected{
+    background: var(--unnamed-color-e0752f);
+}
+
+
+
 
 .carousel .carousel-status{
     display: none;
